@@ -35,4 +35,4 @@ JAVA_OPTS="$JAVA_OPTS @module.tomcat_7_liferay_6_2_bundle.java.additional_props@
 #                   Examples are heap size, GC logging, JMX ports etc.
 
 
-CATALINA_OPTS="$CATALINA_OPTS @system.catalina.opts@ -Dfile.encoding=@system.file.encoding@ -Duser.timezone=@system.timezone@ -Xms@system.java.mem.minsize@ -Xmx@system.java.mem.maxsize@ -XX:MaxPermSize=@system.java.mem.permsize@ @module.tomcat_7_liferay_6_2_bundle.catalina.additional_props@"
+CATALINA_OPTS="$CATALINA_OPTS @system.catalina.opts@ -Dfile.encoding=@system.file.encoding@ -Duser.timezone=@system.timezone@ @module.tomcat_7_liferay_6_2_bundle.catalina.additional_props@"
